--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,35 @@ header {
     color: #fff;
     padding: 10px 0;
     text-align: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+}
+
+nav {
+    margin-top: 10px;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .container {
     display: flex;
-    padding: 20px;
+    padding: 140px 20px 20px; /* Padding for header */
 }
 
 .sidebar {
@@ -56,54 +80,26 @@ header {
 
 .main-content .section {
     margin-bottom: 40px;
+    scroll-margin-top: 140px; /* Adjust this value to match height of header */
 }
 
 .main-content .section h2 {
-    color: #333;
+    border-bottom: 2px solid #333;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
 }
 
 .main-content .section p {
     color: #555;
 }
 
-.experience-item {
+.experience-item, .project-item {
     margin-bottom: 20px;
-    padding: 10px;
-    background-color: #e2e2e2;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
 }
 
-.experience-item img {
-    margin-right: 15px;
-}
-
-.experience-item h3 {
-    color: #333;
-    margin: 0;
-}
-
-.experience-item p {
-    color: #555;
-    margin: 0;
-    margin-left: 20px; /* Move expereince  */
-}
-
-.experience-item ul {
-    margin: 10px 0 0;
-    padding-left: 20px;
-    color: #555;
-}
-
-.experience-item a {
-    color: #007BFF;
-    text-decoration: none;
-    transition: color 0.3s;
-}
-
-.experience-item a:hover {
-    color: #0056b3;
+.experience-item img, .project-item img {
+    vertical-align: middle;
+    margin-right: 10px;
 }
 
 footer {
@@ -114,4 +110,55 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+}
+
+
+/* Certifications Section */
+#certifications {
+    margin-bottom: 40px;
+}
+
+#certifications h2 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.certificate-item {
+    display: flex;
+    align-items: center;
+    background-color: #e2e2e2;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.certificate-item img {
+    width: 100px;
+    height: auto;
+    border-radius: 10px;
+    margin-right: 20px;
+}
+
+.certificate-info h3 {
+    margin: 0;
+    color: #333;
+    font-size: 1.2rem;
+}
+
+.certificate-info p {
+    margin: 5px 0 10px;
+    color: #555;
+}
+
+.certificate-info a {
+    color: #007BFF;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.certificate-info a:hover {
+    color: #0056b3;
 }
